--- a/package.xml
+++ b/package.xml
@@ -10,7 +10,13 @@
   <depend>rclpy</depend>
   <depend>std_msgs</depend>
 
-
+  <exec_depend>portaudio19-dev</exec_depend>
+  <exec_depend>mpg123</exec_depend>
+  <exec_depend>python-speechrecognition-pip</exec_depend> 
+  <exec_depend>python3-pyaudio</exec_depend>
+  <exec_depend>python-gTTS-pip</exec_depend> 
+  <exec_depend>python3-openai-pip</exec_depend> 
+  
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
