--- a/package.xml
+++ b/package.xml
@@ -20,6 +20,7 @@
   <exec_depend>python3-pyaudio</exec_depend>
   <exec_depend>python-gTTS-pip</exec_depend> 
   <exec_depend>python3-openai-pip</exec_depend> 
+  <exec_depend>python3-sounddevice-pip</exec_depend>
   
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
